--- a/data/raw/gis/vlm4rs/human_annotate/paper_6.yaml
+++ b/data/raw/gis/vlm4rs/human_annotate/paper_6.yaml
@@ -38,37 +38,37 @@ blocks:
   citations:
   - marker: '[1–4]'
     intent_label: Domain Overview
-    topic_label: Instruction Tuning and SFT
+    topic_label: Task Formulations in RS
   - marker: '[5–7]'
-    intent_label: Prior Methods
-    topic_label: Object/Region-Level Grounding and Referring
+    intent_label: Domain Overview
+    topic_label: Object-Level Understanding
   - marker: '[8]'
-    intent_label: Prior Methods
+    intent_label: Domain Overview
     topic_label: Image-Level Understanding
   - marker: '[9]'
     intent_label: Research Gap
-    topic_label: Bias Analysis and Error Taxonomies
+    topic_label: Output Consistency and Error Characteristics
   - marker: '[10]'
-    intent_label: Prior Methods
-    topic_label: Prompt-Based Modulation
+    intent_label: Research Gap
+    topic_label: Prompt-Based Conditioning
   - marker: '[11, 12]'
     intent_label: Research Gap
-    topic_label: Bias Analysis and Error Taxonomies
+    topic_label: Output Consistency and Error Characteristics
   - marker: '[13]'
     intent_label: Prospective Application
-    topic_label: Other Topics
+    topic_label: Region-Level Understanding
   - marker: '[14]'
     intent_label: Algorithm/Principle Adoption
-    topic_label: Instruction Tuning and SFT
+    topic_label: Instruction Tuning and Supervised Fine-Tuning (SFT)
   - marker: '[15]'
     intent_label: Algorithm/Principle Adoption
-    topic_label: Logical Consistency Reinforcement
+    topic_label: Hybrid Supervision and Consistency Losses
   - marker: '[16]'
     intent_label: Algorithm/Principle Adoption
-    topic_label: Logical Consistency Reinforcement
+    topic_label: Training and Adaptation Regimes
   - marker: '[17]'
     intent_label: Domain Overview
-    topic_label: Reliability, Reasoning, and Trustworthiness
+    topic_label: Other Topics
 - block_id: 2
   content: The overall architecture of GeoReason is illustrated in Fig. 2. It bridges the gap between raw perception and cognitive
     reasoning through a logic-driven curation pipeline and a consistency-reinforced training strategy.
@@ -104,13 +104,13 @@ blocks:
   citations:
   - marker: '[18]'
     intent_label: Resource Utilization
-    topic_label: Visual Grounding Corpora and Geometry Labels
+    topic_label: Public Remote Sensing Benchmarks
   - marker: '[19]'
     intent_label: Resource Utilization
-    topic_label: Visual Grounding Corpora and Geometry Labels
+    topic_label: Public Remote Sensing Benchmarks
   - marker: '[20]'
     intent_label: Domain Overview
-    topic_label: Other Topics
+    topic_label: Region-Level Understanding
 - block_id: 4
   content: 'To internalize the deductive capabilities of GeoReason-Bench, we develop a two-stage training pipeline (Fig. 2
     middle). Stage 1 employs Supervised Knowledge Initialization to equip the model with foundational reasoning syntax and
@@ -175,7 +175,7 @@ blocks:
   citations:
   - marker: '[21]'
     intent_label: Algorithm/Principle Adoption
-    topic_label: Memory/Compute Optimization Techniques
+    topic_label: Training and Adaptation Regimes
 - block_id: 5
   content: ''
   citations: []
@@ -199,7 +199,7 @@ blocks:
   citations:
   - marker: '[22]'
     intent_label: Model/Architecture Adoption
-    topic_label: Language Models and Tokenization
+    topic_label: Joint Vision–Language Backbones
 - block_id: 7
   content: Table I summarizes the quantitative performance on the GeoReason-Bench test set. We evaluate models across Perceptual
     Tasks (Count, Color, Shape, Scene) and Reasoning Tasks (Reason) to analyze their multi-level understanding. As shown in
